--- a/styles/components.css
+++ b/styles/components.css
@@ -14,3 +14,16 @@
     border: 2px solid #fff;
 }
 
+/* Screen Reader Only - Accessibility */
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
